Created UI Components

--- a/TODO
+++ b/TODO
@@ -1,9 +1,9 @@
+Game Stop function correction
 Add Game Animations
   - Player Out Animation 
   - Board colors
   - Kill Increase
   - Time Goes Out
-Sound Off
 Responsiveness
 Make Game Online 2 player
 Undo Last Move
