Responsive Changes done

--- a/TODO
+++ b/TODO
@@ -1,10 +1,11 @@
-Game Stop function correction
 Add Game Animations
   - Player Out Animation 
   - Board colors
   - Kill Increase
   - Time Goes Out
-Responsiveness
+
+Icon's and Name for game in Index page
+Rotate Board
 Make Game Online 2 player
 Undo Last Move
 Add calling with game
